Commit Final Aula 1 24 de Agosto de 2024, 22:40

--- a/crewAI.ipynb
+++ b/crewAI.ipynb
@@ -6,8 +6,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Instalação e Configuração\n",
-    "%pip install yfinance"
+    "# #Instalação e Configuração\n",
+    "# %pip install yfinance==0.2.41\n",
+    "# %pip install crewai==0.28.8\n",
+    "# %pip install 'crewai[tools]'\n",
+    "# %pip install langchain==0.1.20\n",
+    "# %pip install langchain-openai==0.1.7\n",
+    "# %pip install langchain-community==0.0.38\n",
+    "# %pip install duckduckgo-search==5.3.0"
    ]
   },
   {
@@ -16,71 +22,213 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Importações\n",
     "import json\n",
     "import os\n",
-    "from datetime import datetime\n",
+    "import sys\n",
     "\n",
-    "import yfinance as yf"
+    "import yfinance as yf\n",
+    "\n",
+    "from datetime import datetime\n",
+    "from crewai import Agent, Task, Crew, Process\n",
+    "from langchain.tools import Tool\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "from langchain_community.tools import DuckDuckGoSearchResults\n",
+    "\n",
+    "from api_settings import fetcher as fetch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[*********************100%%**********************]  1 of 1 completed"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[*********************100%%**********************]  1 of 1 completed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def getStocksFrom(ticket):\n",
+    "# Criação da Yahoo Finance Fetch Tool\n",
+    "def __fetchStock(ticket):\n",
     "  return yf.download(ticket, start=\"2023-08-08\", end=\"2024-08-08\")\n",
     "\n",
-    "apple = getStocksFrom(\"AAPL\")\n",
-    "vale = getStocksFrom(\"VALE\")"
+    "yf_fetch_tool = Tool(\n",
+    "  name = \"Yahoo Finance Fetch Tool\",\n",
+    "  description = \"Fetches stock price history for {ticket} from the Yahoo Finance API\",\n",
+    "  func = lambda ticket: __fetchStock(ticket)\n",
+    ")\n",
+    "\n",
+    "# def response(ticket):\n",
+    "#   return yf_fetch_tool.run(ticket)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "             Open   High    Low  Close  Adj Close    Volume\n",
-      "Date                                                       \n",
-      "2023-08-08  13.50  13.90  13.42  13.75  11.938601  27126500\n",
-      "2023-08-09  13.79  13.85  13.57  13.60  11.808363  15380500\n",
-      "2023-08-10  13.72  13.79  13.49  13.50  11.721535  15100700\n",
-      "2023-08-11  13.46  13.51  13.29  13.32  11.565248  29016600\n",
-      "2023-08-14  12.65  12.65  12.45  12.47  11.167622  26182600\n",
-      "...           ...    ...    ...    ...        ...       ...\n",
-      "2024-08-01  10.86  10.91  10.46  10.48  10.106075  34377700\n",
-      "2024-08-02  10.55  10.56  10.35  10.37  10.000000  37203500\n",
-      "2024-08-05   9.71  10.00   9.66   9.95   9.950000  36519600\n",
-      "2024-08-06   9.94  10.17   9.89  10.10  10.100000  40183800\n",
-      "2024-08-07  10.20  10.37  10.11  10.12  10.120000  29244000\n",
-      "\n",
-      "[252 rows x 6 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(vale)"
+    "# Importando OPENAI LLM - GPT\n",
+    "os.environ['OPENAI_API_KEY'] = fetch.fetchKey('api_settings/openAIKey.txt', 'openAIKey')\n",
+    "llm = ChatOpenAI(model=\"gpt-4o-mini\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AGENT_trendsAnalyst = Agent(\n",
+    "  role = \"Senior Market Trends Analyst\",\n",
+    "  goal = \"Find the {ticket} stock price and analyze market trends\",\n",
+    "  backstory = \"\"\"You're a highly experienced investor and you're an expert in analyzing market trends \n",
+    "  and make reasonably accurate predictions about future stock price growth\"\"\",\n",
+    "  verbose = True,\n",
+    "  llm = llm,\n",
+    "  max_iter = 5,\n",
+    "  memory = True,\n",
+    "  allow_delegation = False,\n",
+    "  tools = [yf_fetch_tool]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TASK_getStockPrice = Task(\n",
+    "  description = \"Analyze the stock {ticket} price history and create a trend analysis of up, down or sideways\",\n",
+    "  expected_output = \"\"\" Specify the current trend - up, down or sideways.\n",
+    "  eg. stock='AAPL, price UP'\"\"\",\n",
+    "  agent = AGENT_trendsAnalyst\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "search_tool = DuckDuckGoSearchResults(backend='news', num_results=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AGENT_newsAnalyst = Agent(\n",
+    "  role = \"Senior Market News Analyst\",\n",
+    "  goal = \"\"\"Create a short summary of news regarding the stock {ticket} \n",
+    "  and specify the current trend based on the context of the news - up, down or sideways. \n",
+    "  For each requested stock, specify a number between 0 and 100, where 0 indicates extreme fear and 100 indicates extreme greed.\"\"\",\n",
+    "  backstory = \"\"\"You're a senior market analyst with over a decade in experience, you specialize in predicting future trends based on current news.\n",
+    "  You're also a master level analyst in the traditional markets and you've got a deep understanding of human psychology and market trends.\n",
+    "  You're capable of reading, interpreting and understanding current news - their headlines and contents -  however, you still regard them with a healthy dose of skepticism, you also prefer to read articles\n",
+    "  from trustworthy sources\"\"\",\n",
+    "  verbose = True,\n",
+    "  llm = llm,\n",
+    "  max_iter = 10,\n",
+    "  memory = True,\n",
+    "  allow_delegation = False,\n",
+    "  tools = [search_tool]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TASK_getNews = Task(\n",
+    "  description = f\"\"\"Take the stock and always include BTC and ETH to it (if not requested).\n",
+    "  Use the search tool to search each one individually\n",
+    "  \n",
+    "  The current date is {datetime.now()}\n",
+    "  \n",
+    "  Compose the results into a helpful report\"\"\",\n",
+    "  expected_output = \"\"\" A summary of the overall market and a single-sentenced summary for each requested asset. Include a fear/greed score for each asset based on the current news.\n",
+    "  Use the following format:\n",
+    "  <ASSET NAME>\n",
+    "  <SUMMARY BASED ON NEWS>\n",
+    "  <TREND PREDICTION>\n",
+    "  <FEAR/GREED INDEX>\"\"\",\n",
+    "  agent = AGENT_newsAnalyst\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AGENT_writerAnalyst = Agent(\n",
+    "  role = \"Senior Stock Analyst\",\n",
+    "  goal = \"Write an insightful, informative and compelling 3 paragraph-long newsletter report based on stock price trends and news headline trends.\",\n",
+    "  backstory = \"\"\"You're a well-regarded and well-known market analyst, your newsletter is also widely considered to be trustworthy.\n",
+    "  You're able to understand the intricate and complex market behaviors and you're capable to create compelling stories and narratives that resonate with the wider audiences \n",
+    "  that might not necessarily understand the market as well as you do.\n",
+    "  \n",
+    "  You understand macrofactors and combine multiple theories - eg. cycle theory and fundamental analysis.\n",
+    "  You're capable of holding multiple opinions when analyzing anything\"\"\",\n",
+    "  verbose = True,\n",
+    "  llm = llm,\n",
+    "  max_iter = 5,\n",
+    "  memory = True,\n",
+    "  allow_delegation = True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TASK_writeAnalysis = Task(\n",
+    "  description = \"\"\"Use the Stock Price Trends and Market News Trends analysis reports to create\n",
+    "  and write a brief newsletter analyzing the {ticket} company featuring the most relevant and important points.\n",
+    "  Focus on the stock price trends, news and the fear/greed index score. What are the near future considerations?\n",
+    "  Also include the previous analysis of the stock trend and news summary.\"\"\",\n",
+    "  expected_output = \"\"\" An eloquent 3 paragraph newsletter formatted as markdown in an easily readable manner. It should contain:\n",
+    "  - 3 Bullets Executive Summary\n",
+    "  - Introduction - Set the overall picture and spike up the interest of the reader\n",
+    "  - Main Part that provides the actual bulk of the analysis including the summary of the news and the fear/greed index.\n",
+    "  - Summary - key facts and concrete future trends predictions - up, down or sideways.\n",
+    "  \"\"\",\n",
+    "  agent = AGENT_writerAnalyst,\n",
+    "  context = [TASK_getStockPrice, TASK_getNews]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crew = Crew(\n",
+    "  agents = [AGENT_trendsAnalyst, AGENT_newsAnalyst, AGENT_writerAnalyst],\n",
+    "  tasks = [TASK_getStockPrice, TASK_getNews, TASK_writeAnalysis],\n",
+    "  verbose = 2,\n",
+    "  process = Process.hierarchical,\n",
+    "  full_output = True,\n",
+    "  share_crew = False,\n",
+    "  manager_llm = llm,\n",
+    "  max_iter = 15\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = crew.kickoff(inputs={'ticket': 'AAPL'})"
    ]
   }
  ],
