Commit Inicial Aula 2 24 de Agosto 18:20
  Mudanças Realizadas
    .gitignore modificado
    crewAI.ipynb modificado
    crewAI.py criado

--- a/crewAI.ipynb
+++ b/crewAI.ipynb
@@ -13,7 +13,9 @@
     "# %pip install langchain==0.1.20\n",
     "# %pip install langchain-openai==0.1.7\n",
     "# %pip install langchain-community==0.0.38\n",
-    "# %pip install duckduckgo-search==5.3.0"
+    "# %pip install duckduckgo-search==5.3.0\n",
+    "# %pip install langchain-google-genai\n",
+    "%pip install notebook"
    ]
   },
   {
@@ -33,6 +35,7 @@
     "from crewai import Agent, Task, Crew, Process\n",
     "from langchain.tools import Tool\n",
     "from langchain_openai import ChatOpenAI\n",
+    "from langchain_google_genai import ChatGoogleGenerativeAI\n",
     "from langchain_community.tools import DuckDuckGoSearchResults\n",
     "\n",
     "from api_settings import fetcher as fetch"
@@ -45,17 +48,14 @@
    "outputs": [],
    "source": [
     "# Criação da Yahoo Finance Fetch Tool\n",
-    "def __fetchStock(ticket):\n",
+    "def FUNC__fetchStock(ticket):\n",
     "  return yf.download(ticket, start=\"2023-08-08\", end=\"2024-08-08\")\n",
     "\n",
-    "yf_fetch_tool = Tool(\n",
+    "TOOL_yf_fetch = Tool(\n",
     "  name = \"Yahoo Finance Fetch Tool\",\n",
     "  description = \"Fetches stock price history for {ticket} from the Yahoo Finance API\",\n",
-    "  func = lambda ticket: __fetchStock(ticket)\n",
-    ")\n",
-    "\n",
-    "# def response(ticket):\n",
-    "#   return yf_fetch_tool.run(ticket)"
+    "  func = lambda ticket: FUNC__fetchStock(ticket)\n",
+    ")"
    ]
   },
   {
@@ -65,8 +65,19 @@
    "outputs": [],
    "source": [
     "# Importando OPENAI LLM - GPT\n",
-    "os.environ['OPENAI_API_KEY'] = fetch.fetchKey('api_settings/openAIKey.txt', 'openAIKey')\n",
-    "llm = ChatOpenAI(model=\"gpt-4o-mini\")"
+    "os.environ['OPENAI_API_KEY'] = fetch.fetchKey('api_settings/keyring.txt', 'chatgpt')\n",
+    "gpt = ChatOpenAI(model=\"gpt-4o-mini\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Importando Google LLM - Gemini 1.5\n",
+    "os.environ['GOOGLE_API_KEY'] = fetch.fetchKey('api_settings/keyring.txt', 'gemini')\n",
+    "gemini = ChatGoogleGenerativeAI(model=\"gemini-1.0-pro\")"
    ]
   },
   {
@@ -81,11 +92,11 @@
     "  backstory = \"\"\"You're a highly experienced investor and you're an expert in analyzing market trends \n",
     "  and make reasonably accurate predictions about future stock price growth\"\"\",\n",
     "  verbose = True,\n",
-    "  llm = llm,\n",
+    "  llm = gemini,\n",
     "  max_iter = 5,\n",
     "  memory = True,\n",
     "  allow_delegation = False,\n",
-    "  tools = [yf_fetch_tool]\n",
+    "  tools = [TOOL_yf_fetch]\n",
     ")"
    ]
   },
@@ -109,7 +120,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "search_tool = DuckDuckGoSearchResults(backend='news', num_results=10)"
+    "# Criação da DuckDuckGo Search Tool\n",
+    "TOOL_search = DuckDuckGoSearchResults(backend='news', num_results=10)"
    ]
   },
   {
@@ -128,11 +140,11 @@
     "  You're capable of reading, interpreting and understanding current news - their headlines and contents -  however, you still regard them with a healthy dose of skepticism, you also prefer to read articles\n",
     "  from trustworthy sources\"\"\",\n",
     "  verbose = True,\n",
-    "  llm = llm,\n",
+    "  llm = gemini,\n",
     "  max_iter = 10,\n",
     "  memory = True,\n",
     "  allow_delegation = False,\n",
-    "  tools = [search_tool]\n",
+    "  tools = [TOOL_search]\n",
     ")"
    ]
   },
@@ -175,7 +187,7 @@
     "  You understand macrofactors and combine multiple theories - eg. cycle theory and fundamental analysis.\n",
     "  You're capable of holding multiple opinions when analyzing anything\"\"\",\n",
     "  verbose = True,\n",
-    "  llm = llm,\n",
+    "  llm = gemini,\n",
     "  max_iter = 5,\n",
     "  memory = True,\n",
     "  allow_delegation = True,\n",
@@ -217,7 +229,7 @@
     "  process = Process.hierarchical,\n",
     "  full_output = True,\n",
     "  share_crew = False,\n",
-    "  manager_llm = llm,\n",
+    "  manager_llm = gemini,\n",
     "  max_iter = 15\n",
     ")"
    ]
